fix: 검색 자동 완성 페이징 로직 수정 (#14)
* test: 검색 자동 완성 검증 테스트 추가

* refactor: 검색 자동 완성 페이징 로직 수정